--- a/android/app/src/main/res/layout/activity_academician_login.xml
+++ b/android/app/src/main/res/layout/activity_academician_login.xml
@@ -8,7 +8,7 @@
     android:background="#FFFFFF"
     tools:context=".view.academicianView.AcademicianLoginActivity">
 
-    <!-- TOP BANNER -->
+    <!-- Header -->
     <LinearLayout
         android:id="@+id/topBanner"
         android:layout_width="0dp"
@@ -16,9 +16,9 @@
         android:background="@drawable/card_background"
         android:orientation="horizontal"
         android:padding="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintEnd_toEndOf="parent">
 
         <ImageView
             android:layout_width="60dp"
@@ -52,29 +52,32 @@
         </LinearLayout>
     </LinearLayout>
 
-
-    <!--MAIN-->
-    <LinearLayout
+    <!-- Scrollview -->
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:paddingVertical="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/bottomLogos"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/topBanner">
+        android:fillViewport="true"
+        android:overScrollMode="always"
+        app:layout_constraintTop_toBottomOf="@id/topBanner"
+        app:layout_constraintBottom_toTopOf="@id/bottomLogos">
 
-        <!-- Üst Alan: Mail, Şifre, Giriş, Geri Dön -->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="25dp"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:paddingVertical="20dp">
 
-            <!--Mail-->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="40dp"
+                android:text="Akademisyen Girişi"
+                android:textSize="27sp"
+                android:textColor="#000000" />
+
+            <!-- E-mail -->
             <EditText
                 android:id="@+id/academicianMail"
                 android:layout_width="320dp"
@@ -88,7 +91,7 @@
                 android:textColorHint="#999999"
                 android:textSize="16sp" />
 
-            <!--Şifre-->
+            <!-- Şifre -->
             <LinearLayout
                 android:layout_width="320dp"
                 android:layout_height="50dp"
@@ -121,7 +124,7 @@
                     tools:ignore="OnClick" />
             </LinearLayout>
 
-            <!--Giriş Yap Butonu-->
+            <!-- Giriş Yap -->
             <Button
                 android:id="@+id/btnSignIn"
                 android:layout_width="320dp"
@@ -137,7 +140,7 @@
                 app:cornerRadius="10dp"
                 tools:ignore="OnClick" />
 
-            <!--Geri Dön Butonu-->
+            <!-- Geri Dön -->
             <Button
                 android:id="@+id/btnBack"
                 android:layout_width="320dp"
@@ -154,38 +157,38 @@
                 app:strokeColor="#F06E1B"
                 app:strokeWidth="2dp"
                 tools:ignore="OnClick" />
-        </LinearLayout>
 
-        <!-- Alt Alan: Kayıt Ol -->
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="1dp"
-            android:orientation="horizontal">
-
-            <TextView
+            <!-- Alt: Kayıt Ol -->
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Daha önce kayıt olmadın mı ? "
-                android:textColor="#000000"
-                android:textSize="16sp" />
+                android:layout_gravity="center"
+                android:layout_marginTop="50dp"
+                android:layout_marginBottom="400dp"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/signUpText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="gotoSignUp"
-                android:text="Kayıt Ol"
-                android:textColor="#F06E1B"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                tools:ignore="OnClick" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Daha önce kayıt olmadın mı ? "
+                    android:textColor="#000000"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/signUpText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="gotoSignUp"
+                    android:text="Kayıt Ol"
+                    android:textColor="#F06E1B"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    tools:ignore="OnClick" />
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+    </ScrollView>
 
-
-    <!--FOOTER-->
+    <!-- FOOTER -->
     <LinearLayout
         android:id="@+id/bottomLogos"
         android:layout_width="0dp"
@@ -195,15 +198,15 @@
         android:orientation="horizontal"
         android:padding="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <ImageView
             android:layout_width="0dp"
             android:layout_height="45dp"
-            android:layout_marginHorizontal="6dp"
-            android:layout_marginBottom="23dp"
             android:layout_weight="1"
+            android:layout_marginBottom="23dp"
+            android:layout_marginHorizontal="6dp"
             android:background="@drawable/rounded_img"
             android:clipToOutline="true"
             android:scaleType="fitCenter"
@@ -212,18 +215,18 @@
         <ImageView
             android:layout_width="0dp"
             android:layout_height="48dp"
-            android:layout_marginHorizontal="6dp"
-            android:layout_marginBottom="23dp"
             android:layout_weight="1"
+            android:layout_marginBottom="23dp"
+            android:layout_marginHorizontal="6dp"
             android:scaleType="fitCenter"
             app:srcCompat="@drawable/valilik" />
 
         <ImageView
             android:layout_width="0dp"
             android:layout_height="45dp"
-            android:layout_marginHorizontal="6dp"
-            android:layout_marginBottom="23dp"
             android:layout_weight="1"
+            android:layout_marginBottom="23dp"
+            android:layout_marginHorizontal="6dp"
             android:background="@drawable/rounded_img"
             android:scaleType="fitCenter"
             app:srcCompat="@drawable/kosgeb" />
@@ -231,9 +234,9 @@
         <ImageView
             android:layout_width="0dp"
             android:layout_height="45dp"
-            android:layout_marginHorizontal="6dp"
-            android:layout_marginBottom="23dp"
             android:layout_weight="1"
+            android:layout_marginBottom="23dp"
+            android:layout_marginHorizontal="6dp"
             android:background="@drawable/rounded_img"
             android:clipToOutline="true"
             android:scaleType="fitCenter"
@@ -241,3 +244,4 @@
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
