--- a/android/app/src/main/res/layout/activity_industry.xml
+++ b/android/app/src/main/res/layout/activity_industry.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:background="#FFFFFF"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".view.industryView.IndustryActivity">
 
-    <!-- TOP BANNER -->
+    <!--Header-->
     <LinearLayout
         android:id="@+id/topBanner"
         android:layout_width="0dp"
@@ -16,10 +16,11 @@
         android:background="@drawable/card_background"
         android:orientation="horizontal"
         android:padding="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintEnd_toEndOf="parent">
 
+        <!-- Logo ve Başlık -->
         <ImageView
             android:layout_width="60dp"
             android:layout_height="wrap_content"
@@ -30,10 +31,10 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="7dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_gravity="center_vertical">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -52,37 +53,35 @@
         </LinearLayout>
     </LinearLayout>
 
-
-    <!--MAIN-->
-    <LinearLayout
-        android:layout_width="match_parent"
+    <!-- Scrollview -->
+    <ScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:paddingVertical="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/bottomLogos"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:fillViewport="true"
+        app:layout_constraintTop_toBottomOf="@id/topBanner"
+        app:layout_constraintBottom_toTopOf="@id/bottomLogos"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/topBanner">
+        app:layout_constraintEnd_toEndOf="parent">
 
-        <!--Üst Alan-->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="10dp"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:paddingVertical="20dp">
 
+            <!-- Üst Başlık -->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
+                android:layout_marginTop="40dp"
                 android:text="Sanayi Girişi"
                 android:textSize="30sp"
                 android:textColor="#000000"/>
 
-            <!--Mail-->
+            <!-- Mail Girişi -->
             <EditText
                 android:id="@+id/industryMail"
                 android:layout_width="320dp"
@@ -96,7 +95,7 @@
                 android:textColorHint="#999999"
                 android:textSize="16sp" />
 
-            <!--Şifre-->
+            <!-- Şifre Girişi -->
             <LinearLayout
                 android:layout_width="320dp"
                 android:layout_height="50dp"
@@ -129,7 +128,7 @@
                     tools:ignore="OnClick" />
             </LinearLayout>
 
-            <!--Giriş Yap Butonu-->
+            <!-- Giriş Yap Butonu -->
             <Button
                 android:id="@+id/signIn"
                 android:layout_width="320dp"
@@ -145,7 +144,7 @@
                 app:cornerRadius="10dp"
                 tools:ignore="OnClick" />
 
-            <!--Geri Dön Butonu-->
+            <!-- Geri Dön Butonu -->
             <Button
                 android:id="@+id/btnBack"
                 android:layout_width="320dp"
@@ -163,6 +162,7 @@
                 app:strokeWidth="2dp"
                 tools:ignore="OnClick" />
 
+            <!-- Veya bölümü -->
             <LinearLayout
                 android:layout_width="330dp"
                 android:layout_height="wrap_content"
@@ -191,10 +191,9 @@
                     android:layout_height="1dp"
                     android:layout_weight="1"
                     android:background="#888" />
-
             </LinearLayout>
 
-            <!--Google-->
+            <!-- Google ile Giriş -->
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -219,42 +218,40 @@
                     android:textStyle="bold"
                     android:textSize="15sp"
                     android:text="Continue with Google Account"/>
+            </LinearLayout>
 
+            <!-- Kayıt Ol -->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="400dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Daha önce kayıt olmadın mı ? "
+                    android:textColor="#000000"
+                    android:textSize="15sp" />
+
+                <TextView
+                    android:id="@+id/signUpIndustry"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="signUpIndustry"
+                    android:text="Kayıt Ol"
+                    android:textColor="#F06E1B"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    tools:ignore="OnClick" />
             </LinearLayout>
 
         </LinearLayout>
+    </ScrollView>
 
-        <!-- Alt Alan: Kayıt Ol -->
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="1dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Daha önce kayıt olmadın mı ? "
-                android:textColor="#000000"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/signUpIndustry"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="signUpIndustry"
-                android:text="Kayıt Ol"
-                android:textColor="#F06E1B"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                tools:ignore="OnClick" />
-        </LinearLayout>
-
-    </LinearLayout>
-
-
-    <!--FOOTER-->
+    <!-- FOOTER -->
     <LinearLayout
         android:id="@+id/bottomLogos"
         android:layout_width="0dp"
@@ -264,8 +261,8 @@
         android:orientation="horizontal"
         android:padding="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <ImageView
             android:layout_width="0dp"
