--- a/android/app/src/main/res/layout/activity_admin_panel.xml
+++ b/android/app/src/main/res/layout/activity_admin_panel.xml
@@ -6,8 +6,7 @@
     android:layout_height="match_parent"
     android:background="#EFEEF5"
     tools:context=".view.academicianView.AdminPanelActivity">
-
-
+    
     <!--Header-->
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/materialCardView"
@@ -27,11 +26,11 @@
             android:id="@+id/gotoMain"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_marginTop="13dp"
+            android:layout_gravity="center_vertical"
             android:layout_marginStart="20dp"
+            android:layout_marginTop="13dp"
             android:onClick="goToMain"
             android:src="@drawable/baseline_arrow_back_ios_24"
-            android:layout_gravity="center_vertical"
             tools:ignore="OnClick" />
 
         <TextView
@@ -47,15 +46,14 @@
 
     </com.google.android.material.card.MaterialCardView>
 
-
-    <!-- SCROLLABLE CONTENT -->
+    <!-- ScrollView -->
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/materialCardView"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/materialCardView">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -77,15 +75,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:weightSum="2"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:weightSum="2">
 
                 <!--Akademisyen-->
                 <androidx.cardview.widget.CardView
                     android:layout_width="190dp"
                     android:layout_height="145dp"
-                    android:layout_weight="1"
                     android:layout_marginRight="10dp"
+                    android:layout_weight="1"
                     app:cardBackgroundColor="@android:color/white"
                     app:cardCornerRadius="13dp"
                     app:cardElevation="2dp">
@@ -114,17 +112,17 @@
                                 android:id="@+id/progressCircleAcademician"
                                 android:layout_width="90dp"
                                 android:layout_height="90dp"
-                                android:layout_gravity="center"/>
+                                android:layout_gravity="center" />
 
                         </FrameLayout>
 
                         <TextView
-                            android:id="@+id/totalTextViewAcademician"
+                            android:id="@+id/totalAcademician"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Toplam: 0"
-                            android:textColor="#777777"
-                            android:textSize="12sp" />
+                            android:text="Toplam: "
+                            android:textColor="#666666"
+                            android:textSize="13sp" />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
@@ -162,15 +160,15 @@
                                 android:id="@+id/progressCircleIndustry"
                                 android:layout_width="90dp"
                                 android:layout_height="90dp"
-                                android:layout_gravity="center"/>
+                                android:layout_gravity="center" />
 
                         </FrameLayout>
 
                         <TextView
-                            android:id="@+id/totalTextViewIndustry"
+                            android:id="@+id/totalIndustry"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Toplam: 0"
+                            android:text="Toplam: "
                             android:textColor="#777777"
                             android:textSize="12sp" />
                     </LinearLayout>
@@ -193,15 +191,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:weightSum="2"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:weightSum="2">
 
                 <!--Onaylanan-->
                 <androidx.cardview.widget.CardView
                     android:layout_width="190dp"
                     android:layout_height="145dp"
-                    android:layout_weight="1"
                     android:layout_marginRight="10dp"
+                    android:layout_weight="1"
                     app:cardBackgroundColor="@android:color/white"
                     app:cardCornerRadius="13dp"
                     app:cardElevation="2dp">
@@ -230,12 +228,12 @@
                                 android:id="@+id/progressCircleApproved"
                                 android:layout_width="90dp"
                                 android:layout_height="90dp"
-                                android:layout_gravity="center"/>
+                                android:layout_gravity="center" />
 
                         </FrameLayout>
 
                         <TextView
-                            android:id="@+id/totalTextViewApproved"
+                            android:id="@+id/totalApproved"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Toplam: 0"
@@ -278,22 +276,21 @@
                                 android:id="@+id/progressCircleRejected"
                                 android:layout_width="90dp"
                                 android:layout_height="90dp"
-                                android:layout_gravity="center"/>
+                                android:layout_gravity="center" />
 
                         </FrameLayout>
 
                         <TextView
-                            android:id="@+id/totalTextViewRejected"
+                            android:id="@+id/totalRejected"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Toplam: 0"
+                            android:text="Toplam: "
                             android:textColor="#777777"
                             android:textSize="12sp" />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
             </LinearLayout>
-
 
 
             <!-- Ortak Proje Talebi -->
@@ -310,15 +307,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:weightSum="2"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:weightSum="2">
 
                 <!--Ortak proje-->
                 <androidx.cardview.widget.CardView
                     android:layout_width="190dp"
                     android:layout_height="145dp"
-                    android:layout_weight="1"
                     android:layout_marginRight="10dp"
+                    android:layout_weight="1"
                     app:cardBackgroundColor="@android:color/white"
                     app:cardCornerRadius="13dp"
                     app:cardElevation="2dp">
@@ -347,15 +344,15 @@
                                 android:id="@+id/progressCircleJoinedProject"
                                 android:layout_width="90dp"
                                 android:layout_height="90dp"
-                                android:layout_gravity="center"/>
+                                android:layout_gravity="center" />
 
                         </FrameLayout>
 
                         <TextView
-                            android:id="@+id/totalTextViewJoinedProject"
+                            android:id="@+id/totalJoinedProject"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Toplam: 0"
+                            android:text="Toplam: "
                             android:textColor="#777777"
                             android:textSize="12sp" />
                     </LinearLayout>
@@ -395,22 +392,21 @@
                                 android:id="@+id/progressCircleAppointed"
                                 android:layout_width="90dp"
                                 android:layout_height="90dp"
-                                android:layout_gravity="center"/>
+                                android:layout_gravity="center" />
 
                         </FrameLayout>
 
                         <TextView
-                            android:id="@+id/totalTextViewAppointed"
+                            android:id="@+id/totalAppointed"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Toplam: 0"
+                            android:text="Toplam: "
                             android:textColor="#777777"
                             android:textSize="12sp" />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
             </LinearLayout>
-
 
 
             <!-- Genel İstatistikler -->
@@ -426,8 +422,6 @@
             <include
                 android:id="@+id/card_summary"
                 layout="@layout/stat_card_summary" />
-
-
 
             <!-- Talep Buton Kartı -->
             <androidx.cardview.widget.CardView
@@ -446,27 +440,28 @@
                     android:padding="5dp">
 
                     <!-- Bekleyen Talepler -->
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
 
-                            <Button
-                                android:id="@+id/btnBekleyenTalepler"
-                                android:layout_width="match_parent"
-                                android:layout_height="50dp"
-                                android:gravity="start|center_vertical"
-                                android:backgroundTint="#FFFFFF"
-                                android:elevation="2dp"
-                                android:onClick="pendingRequests"
-                                android:text="🕗 Bekleyen Talepler"
-                                android:textColor="#000000"
-                                android:textStyle="bold"
-                                android:paddingStart="16dp"
-                                app:cornerRadius="10dp"
-                                tools:ignore="OnClick" />
+                        <Button
+                            android:id="@+id/btnBekleyenTalepler"
+                            android:layout_width="match_parent"
+                            android:layout_height="50dp"
+                            android:layout_marginVertical="3dp"
+                            android:backgroundTint="#FFFFFF"
+                            android:elevation="2dp"
+                            android:gravity="start|center_vertical"
+                            android:onClick="pendingRequests"
+                            android:paddingStart="16dp"
+                            android:text="🕗 Bekleyen Talepler"
+                            android:textColor="#000000"
+                            android:textStyle="bold"
+                            app:cornerRadius="10dp"
+                            tools:ignore="OnClick" />
 
-                        </LinearLayout>
+                    </LinearLayout>
 
                     <View
                         android:layout_width="match_parent"
@@ -479,14 +474,37 @@
                         android:id="@+id/btnEskiTalepler"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
-                        android:gravity="start|center_vertical"
+                        android:layout_marginVertical="3dp"
                         android:backgroundTint="#FFFFFF"
                         android:elevation="2dp"
+                        android:gravity="start|center_vertical"
                         android:onClick="oldRequests"
+                        android:paddingStart="16dp"
                         android:text="📆 Eski Talepler"
                         android:textColor="#000000"
                         android:textStyle="bold"
+                        app:cornerRadius="10dp"
+                        tools:ignore="OnClick" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginVertical="-4dp"
+                        android:background="#DDDDDD" />
+
+                    <Button
+                        android:id="@+id/btnAdminKullanici"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_marginVertical="3dp"
+                        android:backgroundTint="#FFFFFF"
+                        android:elevation="2dp"
+                        android:gravity="start|center_vertical"
+                        android:onClick="adminUser"
                         android:paddingStart="16dp"
+                        android:text="🪪 Admin Kullanıcısı Ekle"
+                        android:textColor="#000000"
+                        android:textStyle="bold"
                         app:cornerRadius="10dp"
                         tools:ignore="OnClick" />
                 </LinearLayout>
@@ -494,6 +512,7 @@
 
         </LinearLayout>
     </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
